--- a/Pro_Index.html
+++ b/Pro_Index.html
@@ -6,12 +6,110 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="./Project/CSS/Pro_Index.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="./Project/CSS/Pro_Index.css">
 
     <title>Martina Gibson</title>
   </head>
   <body>
-    <h1>My Professional Portfolio</h1>
+   <!--Page Content-->
+   
+   
+    <!--Navigation-->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">M.G</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+          <ul class="navbar-nav">
+            <li class="nav-item active">
+              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Skills</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Let's Connect</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                My Projects
+              </a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                <a class="dropdown-item" href="#">Project #1 (Pending)</a>
+
+                <a class="dropdown-item" href="#">Project #2 (Pending)</a>
+
+                <a class="dropdown-item" href="#">Project #3 (Pending)</a>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    <!--/Navigation-->
+
+    <!--Jumbotron/ Intro-->
+    <div class="jumbotron jumbotron-fluid">
+      <div class="container text-center">
+        <h1 class="display-4">Martina.Gibson</h1>
+          <p class="lead">Nothing is impossible, the word itself says “I’m possible”! — Audrey Hepburn</p>
+      </div>
+    </div>
+    
+    <!--End Jumbo--> 
+    
+          <!--Skills-->
+          <div class="container text-center">
+              <div class="row">
+                <div class="col-sm m-4">
+                  <h2 style= "font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif">Lady Coder</h2>
+                  <p style= "font-family: Courier"> Currently a work in progress....</p>
+                  <ul style= "list-style-type: none">
+                    <li>Working on HTML/CSS</li>
+                    <li>Bootstrap</li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          <!---End About-->
+
+    <!--Projects-->
+    <div class="container text-center">
+      <h2 class= text-center>Projects</h2>
+        <div class="row align-items-start">
+          <div class="col m-1">
+            One
+          </div>
+
+          <div class="col m-4">
+            Two
+          </div>
+
+          <div class="col m-2">
+            Three
+          </div>
+
+        </div>
+    </div>    
+
+    <!--End Projects-->
+
+          <!--Contact-->
+          <div class="container text-center">
+              <div class="row">
+                <div class="col-sm bp-4 m-4">
+                  <h3 class="m-1 p-4">Let's Connect</h2>
+                    <button type="button" class="btn btn-outline-secondary">
+                      <a href="https://github.com/MartinaGibson">GitHub</a>
+                    </button>
+                    <button type="button" class="btn btn-outline-secondary">
+                      <a href="https://www.linkedin.com/in/martina-gibson-8078aa74/">LinkedIn</a>
+                    </button>
+                </div>
+              </div>
+            </div>
+          <!--Contact-->
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
